# tiny-usb-swift

./: .swift-version  README.md
.nova/Tasks/: SDK.json  Swift.json
SDK/: CMakeLists.txt  Makefile  main.c  main_min.c
Shared/: usb_descriptors.c
Swift/: BridgingHeader.h  CMakeLists.txt  Main.swift  USBReports.c  USBReports.swift
